syntax = "proto3";

option csharp_namespace = "DADProject";

service ProjectBankService {
	rpc ReadBalance(ReadBalanceRequest) returns (ReadBalanceReply);
	rpc Deposit(DepositRequest) returns (DepositReply);
	rpc Withdraw(WithdrawRequest) returns (WithdrawReply);
	rpc AcceptCompareSwapResult (CompareSwapResult) returns (CompareSwapReply);
}

message Metadata {
	int32 senderId = 1;
	int32 seq = 2;
	int32 ack = 3;
}

message ReadBalanceRequest {
	Metadata metadata = 1;
}
message ReadBalanceReply {
	Metadata metadata = 1;
	double balance = 2;
}

message DepositRequest {
	Metadata metadata = 1;
	double amount = 2;
}
message DepositReply {
	Metadata metadata = 1;
}

message WithdrawRequest {
	Metadata metadata = 1;
	double amount = 2;
}
message WithdrawReply {
	Metadata metadata = 1;
	bool status = 2;
}

message CompareSwapResult {
	Metadata metadata = 1;
	int32 slot = 2;
	int32 value = 3; 
}

message CompareSwapReply {
	Metadata metadata = 1;
}